Fix hero image on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,6 +14,12 @@
   text-shadow: 2px 2px 2px rgb(80, 80, 80);
 }
 
+@media only screen and (max-width: 500px) {
+  .page-header {
+    background-position: -65px center;
+  }
+}
+
 .page-header .project-tagline {
   font-size: 1.75rem;
   opacity: 1;
